# artemis

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: CI_DEPENDENCY_VERIFICATION.md  DEPENDENCY_ANALYSIS.md  README.md  ci.yml  release.yml
artemis/: CLAUDE.md  README.md  main.py  pyproject.toml  test_run.py
artemis/.claude/: settings.local.json
artemis/.github/workflows/: build.yml
artemis/src/agent/: assistant.py  context_window_memory.py  memory.py  short_term_memory.py  summarization_based_memory.py
artemis/src/core/: __init__.py  artemis_model.py
artemis/src/functions/: calculator.py
artemis/tests/: test_artemis_model.py  test_short_term_memory.py  test_summarization_based_memory.py
cuda/kernels/: agent_update.cu  spatial_index.cu
docs/: API_GUIDE.md  ARCHITECTURE.md  BUILD.md  HEADER_STRUCTURE.md  PROJECT_OVERVIEW.md
examples/: CMakeLists.txt  basic_boids.cpp  config_based.cpp
examples/configs/: boids.yaml
include/artemis/: artemis.hpp
include/artemis/analysis/: metrics_engine.hpp  pattern_detector.hpp
include/artemis/behaviors/: behavior.hpp  behavior_manager.hpp  boids_behavior.hpp  predator_prey_behavior.hpp  social_behavior.hpp
include/artemis/config/: simulation_config.hpp  yaml_parser.hpp
include/artemis/core/: agent_arrays.hpp  environment.hpp  scheduler.hpp  simulation.hpp
include/artemis/gpu/: device_manager.hpp  kernels.cuh  spatial_index.hpp
include/artemis/io/: checkpoint_manager.hpp  data_exporter.hpp  hdf5_writer.hpp
include/artemis/util/: gpu_util.hpp  math.hpp  types.hpp
src/analysis/: metrics_engine.cpp  pattern_detector.cpp
src/cli/: main.cpp
src/config/: simulation_config.cpp  yaml_parser.cpp
src/core/: environment.cpp  scheduler.cpp  simulation.cpp
src/io/: checkpoint_manager.cpp
tests/: CMakeLists.txt  test_agent_arrays.cpp  test_main.cpp  test_metrics.cpp  test_spatial_index.cpp
